Mon Apr  3 13:37:15 2000  Hans-Peter Nilsson  <hp@axis.com>

	* aoutx.h (NAME(aout,reloc_type_lookup)): Add BFD_RELOC_8 and
	BFD_RELOC_16 to switch for extended relocs.
	(MY_swap_ext_reloc_in): New.
	(MY_swap_ext_reloc_out): New.
	(NAME(aout,slurp_reloc_table)): Use MY_swap_ext_reloc_in rather
	than NAME(aout,swap_ext_reloc_in) for extended relocs.
	(NAME(aout,squirt_out_relocs)): Similarly use
	MY_swap_ext_reloc_out.
	(aout_link_reloc_link_order): Use MY_put_ext_reloc if defined.

2000-04-03  Kazu Hirata  <kazu@hxi.com>

	* coff-h8300.c (h8300_reloc16_extra_cases): Add bsr:16 -> bsr:8 to
	the R_PCRWORD_B case.

2000-03-31  Thomas de Lellis  <tdel@wrs.com>

	* srec.c : Set CHUNK size to 16 bytes to prevent download failures
	on some targets.
	* ihex.c : Ditto.

Wed Mar 30 15:28:00 2000  Donald Lindsay  <dlindsay@cygnus.com>

	* elf32-m32r.c (m32r_elf_generic_reloc): new function.  All
	HOWTO references to bfd_elf_generic_reloc, that have
	partial_inplace == true, now use the new function.  The function
	is based on the recent rewrite of m32r_elf_lo16_reloc(), and
	extends its fixes to the R_M32R_{16,24,32} relocs.
	The new logic in m32r_elf_lo16_reloc() has been removed, and
	it instead calls the new routine to obtain that functionality.

2000-03-27  Alan Modra  <alan@linuxcare.com>

	* elf32-avr.c (elf32_avr_gc_mark_hook, elf32_avr_gc_sweep_hook,
	elf32_avr_check_relocs, avr_final_link_relocate,
	elf32_avr_relocate_section, bfd_elf_avr_final_write_processing,
	elf32_avr_object_p): Add prototypes.
	(elf32_avr_gc_mark_hook): Add default for h->root.type.
	(bfd_elf_avr_final_write_processing): Make static.

2000-03-27  Denis Chertykov  <denisc@overta.ru>

	* cpu-avr.c: New file.  BFD support routines for AVR architecture.
	* archures.c (bfd_architecture): Add AVR architecture.
	(bfd_archures_list): Add reference to AVR architecture info.
	* elf.c (prep_headers): Handle bfd_arch_avr.
	* reloc.c: Add various AVR relocation enums.